Restructured the build-process